--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
+    <script src="https://kit.fontawesome.com/220bbdbf50.js" crossorigin="anonymous"></script>
+    <title>FYLO</title>
 </head>
 <body>
-    
+    <main class="container">
+        FYLO
+    </main>
 </body>
 </html>
