--- a/index.html
+++ b/index.html
@@ -6,11 +6,23 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
     <script src="https://kit.fontawesome.com/220bbdbf50.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Raleway:wght@400;700&display=swap" rel="stylesheet">
     <title>FYLO</title>
 </head>
 <body>
     <main class="container">
-        FYLO
+        <div class="navbar">
+           
+            <h1 class="sitename__logo"><img src="images/logo.svg" alt="logo"></h1>
+
+            <nav class="nav">
+                <ul class="nav__list">
+                   <li class="nav__item"><a href="#" class="nav__link">Features</a></li>
+                   <li class="nav__item"><a href="#" class="nav__link">Team</a></li>
+                   <li class="nav__item"><a href="#" class="nav__link">Sign In</a></li>
+                </ul>
+            </nav>
+        </div>
     </main>
 </body>
 </html>
