navbar's finally done

--- a/index.html
+++ b/index.html
@@ -7,15 +7,26 @@
     <link rel="stylesheet" href="css/style.css">
     <script src="https://kit.fontawesome.com/220bbdbf50.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Raleway:wght@400;700&display=swap" rel="stylesheet">
+    <script src="js/scripts.js" defer async></script>
     <title>FYLO</title>
 </head>
 <body>
     <main class="container">
         <div class="navbar">
            
-            <h1 class="sitename__logo"><img src="images/logo.svg" alt="logo"></h1>
-
+            <h1><img class="sitename__logo" src="images/logo.svg" alt="logo"></h1>
+            <ul class="nav__list--mobile">
+                <li class="nav__item--mobile"></li><a href="#" class="nav__link--mobile">Features</a></li>
+                <li class="nav__item--mobile"></li><a href="#" class="nav__link--mobile">Team</a></li>
+                <li class="nav__item--mobile"></li><a href="#" class="nav__link--mobile">Sign In</a></li>
+            </ul>
             <nav class="nav">
+                <div class="hamburger">
+                    <div class="hamburger__line"></div>
+                    <div class="hamburger__line"></div>
+                    <div class="hamburger__line"></div>
+                </div>
+                
                 <ul class="nav__list">
                    <li class="nav__item"><a href="#" class="nav__link">Features</a></li>
                    <li class="nav__item"><a href="#" class="nav__link">Team</a></li>
