problem with intro

--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
                 </ul>
             </nav>
         </div>
+        <section class="intro">
+           <img class="intro__img" src="images/illustration-intro.png" alt="illustration">
+           <h2 class="intro__title">All your files in one secure location, accessible anywhere.</h2>
+           <p class="intro__par">Fylo stores all your most important files in one secure location. Access them wherever you need, share and collaborate with friends family, and co-workers. </p>
+        </section>
     </main>
 </body>
 </html>
