--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
            <img class="intro__img" src="images/illustration-intro.png" alt="illustration">
            <h2 class="intro__title">All your files in one secure location, accessible anywhere.</h2>
            <p class="intro__par">Fylo stores all your most important files in one secure location. Access them wherever you need, share and collaborate with friends family, and co-workers. </p>
+            <button type="button" class="gradient__btn">Get started</button>
         </section>
     </main>
 </body>
