play with columns

--- a/index.html
+++ b/index.html
@@ -41,25 +41,27 @@
             <button type="button" class="gradient__btn">Get started</button>
         </section>
         <section class="option">
-            <div class="option__item">
-                <img class="option__icon" src="images/icon-access-anywhere.svg" alt="icon of access">
-                <h3 class="option__title">Access yoyr files, anywhere</h3>
-                <p class="option__text">The ability to use a smartphone, tablet, or computer to access your account means your files follow you everywhere.</p>
-            </div>
-            <div class="option__item">
-                <img class="option__icon" src="images/icon-security.svg" alt="icon of security">
-                <h3 class="option__title">Security you can trust</h3>
-                <p class="option__text">2-factor authentication and user-controlled encryption are just a couple of the security features we allow to help secure your files. </p>
-            </div>
-            <div class="option__item">
-                <img class="option__icon" src="images/icon-collaboration.svg" alt="icon of collaboration">
-                <h3 class="option__title">Real-time collaboration</h3>
-                <p class="option__text"> Securely share files and folders with friends, family and colleagues for live collaboration. No email attachments required.</p>
-            </div>
-            <div class="option__item">
-                <img class="option__icon" src="images/icon-any-file.svg" alt="icon of type of file">
-                <h3 class="option__title">Store any type of file</h3>
-                <p class="option__text">Whether you're sharing holidays photos or work documents, Fylo has you covered allowing for all file types to be securely stored and shared.</p>
+            <div class="option__wrapper">
+                <div class="option__item">
+                    <img class="option__icon" src="images/icon-access-anywhere.svg" alt="icon of access">
+                    <h3 class="option__title">Access yoyr files, anywhere</h3>
+                    <p class="option__text">The ability to use a smartphone, tablet, or computer to access your account means your files follow you everywhere.</p>
+                </div>
+                <div class="option__item">
+                    <img class="option__icon" src="images/icon-security.svg" alt="icon of security">
+                    <h3 class="option__title">Security you can trust</h3>
+                    <p class="option__text">2-factor authentication and user-controlled encryption are just a couple of the security features we allow to help secure your files. </p>
+                </div>
+                <div class="option__item">
+                    <img class="option__icon" src="images/icon-collaboration.svg" alt="icon of collaboration">
+                    <h3 class="option__title">Real-time collaboration</h3>
+                    <p class="option__text"> Securely share files and folders with friends, family and colleagues for live collaboration. No email attachments required.</p>
+                </div>
+                <div class="option__item">
+                    <img class="option__icon" src="images/icon-any-file.svg" alt="icon of type of file">
+                    <h3 class="option__title">Store any type of file</h3>
+                    <p class="option__text">Whether you're sharing holidays photos or work documents, Fylo has you covered allowing for all file types to be securely stored and shared.</p>
+                </div>
             </div>
         </section>
     </main>
