--- a/index.html
+++ b/index.html
@@ -64,6 +64,17 @@
                 </div>
             </div>
         </section>
+        <section class="extra">
+            <div class="extra__wrapper">
+                <img class="extra__img" src="images/illustration-stay-productive.png" alt="image of stay productive">
+                <div class="extra__offer">
+                    <h2 class="extra__title">Stay productive, wherever you are</h2>
+                    <p class="extra__text">Never let location be an issue when accessing your files. Fylo has you covered for all of your file storage needs.</p>
+                    <p class="extra__text">Securely share files and folders with friends, family and colleagues for live collaboration. No email attachments required.</p>
+                    <a href="#" class="extra__link">See how Fylo works <i class="fas fa-arrow-alt-circle-right"></i></a>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
