--- a/index.html
+++ b/index.html
@@ -75,6 +75,40 @@
                 </div>
             </div>
         </section>
+        <section class="testimonial">
+            <div class="testimonial__wrapper">
+                <div class="testimonial__item">
+                    <p class="testimonial__text">Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has become a well-oiled collaboration machine.</p>
+                    <div class="testimonial__author">
+                        <img src="images/profile-1.jpg" alt="photo of author">
+                        <div class="testimonial__who">
+                            <span class="testimonial__author--name">Satish Patel</span>
+                            <span class="testimonial__author--role">Founder & CEO, Huddle</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="testimonial__item">
+                    <p class="testimonial__text">Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has become a well-oiled collaboration machine.</p>
+                    <div class="testimonial__author">
+                        <img src="images/profile-2.jpg" alt="photo of author">
+                        <div class="testimonial__who">
+                            <span class="testimonial__author--name">Bruce McKenzie</span>
+                            <span class="testimonial__author--role">Founder & CEO, Huddle</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="testimonial__item">
+                    <p class="testimonial__text">Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has become a well-oiled collaboration machine.</p>
+                    <div class="testimonial__author">
+                        <img src="images/profile-3.jpg" alt="photo of author">
+                        <div class="testimonial__who">
+                            <span class="testimonial__author--name">Iva Boyd</span>
+                            <span class="testimonial__author--role">Founder & CEO, Huddle</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
