--- a/index.html
+++ b/index.html
@@ -78,9 +78,10 @@
         <section class="testimonial">
             <div class="testimonial__wrapper">
                 <div class="testimonial__item">
+                    <img class="testimonial__quotes" src="images/bg-quotes.png" alt="picture of quotes">
                     <p class="testimonial__text">Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has become a well-oiled collaboration machine.</p>
                     <div class="testimonial__author">
-                        <img src="images/profile-1.jpg" alt="photo of author">
+                        <img class="testimonial__img" src="images/profile-1.jpg" alt="photo of author">
                         <div class="testimonial__who">
                             <span class="testimonial__author--name">Satish Patel</span>
                             <span class="testimonial__author--role">Founder & CEO, Huddle</span>
@@ -90,7 +91,7 @@
                 <div class="testimonial__item">
                     <p class="testimonial__text">Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has become a well-oiled collaboration machine.</p>
                     <div class="testimonial__author">
-                        <img src="images/profile-2.jpg" alt="photo of author">
+                        <img class="testimonial__img" src="images/profile-2.jpg" alt="photo of author">
                         <div class="testimonial__who">
                             <span class="testimonial__author--name">Bruce McKenzie</span>
                             <span class="testimonial__author--role">Founder & CEO, Huddle</span>
@@ -100,7 +101,7 @@
                 <div class="testimonial__item">
                     <p class="testimonial__text">Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has become a well-oiled collaboration machine.</p>
                     <div class="testimonial__author">
-                        <img src="images/profile-3.jpg" alt="photo of author">
+                        <img class="testimonial__img" src="images/profile-3.jpg" alt="photo of author">
                         <div class="testimonial__who">
                             <span class="testimonial__author--name">Iva Boyd</span>
                             <span class="testimonial__author--role">Founder & CEO, Huddle</span>
