--- a/index.html
+++ b/index.html
@@ -76,9 +76,8 @@
             </div>
         </section>
         <section class="testimonial">
-            <div class="testimonial__wrapper">
+            <div class="testimonial__wrapper quote">
                 <div class="testimonial__item">
-                    <img class="testimonial__quotes" src="images/bg-quotes.png" alt="picture of quotes">
                     <p class="testimonial__text">Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has become a well-oiled collaboration machine.</p>
                     <div class="testimonial__author">
                         <img class="testimonial__img" src="images/profile-1.jpg" alt="photo of author">
@@ -110,6 +109,20 @@
                 </div>
             </div>
         </section>
+        <footer class="footer">
+            <div class="contact">
+                <h2 class="contact__title">
+                    Get early access today
+                </h2>
+                <p class="contact__text">It only takes a minute to sign up and our free atarter tier is extremely gnerous. If you have any questions, our support tam would be happy to help you.</p>
+                <div class="contact__form">
+                    <input type="email" class="contact__input" placeholder="email@example.com"/>
+                    <button type="button" class="contact__btn">Get started for free</button>
+                </div>
+            </div>
+            Fylo
+        </footer>
+
     </main>
 </body>
 </html>
