footer looks better

--- a/index.html
+++ b/index.html
@@ -148,9 +148,9 @@
                     <li>Privacy</li>
                 </ul>
                 <div class="footer__media">
-                    <i class="fab fa-facebook-square"></i>
-                    <i class="fab fa-twitter-square"></i>
-                    <i class="fab fa-instagram-square"></i>
+                    <i class="fab fa-facebook-square footer__media--facebook"></i>
+                    <i class="fab fa-twitter-square footer__media--twitter"></i>
+                    <i class="fab fa-instagram-square footer__media--instagram"></i>
                 </div>
 
             </section>
