--- a/index.html
+++ b/index.html
@@ -154,6 +154,7 @@
                 </div>
 
             </section>
+            <p class="footer__end">Challenge by Frontend Mentor. Coded by undstory, 2020.</p>
         </footer>
 
     </main>
